# disco-opensource

./: README.md
notices/: police-notice.html
sources/: iio_info-unknown
sources/apm-plane-disco-unknown/apm-plane-disco-unknown/: 50-apm-plane-disco.rc  50-arducopter.rc  Config.in  apm-plane-disco.sh  atom.mk
sources/avahi-0.6.29/: atom.mk  remove_debug_trap.patch
sources/busybox-unknown/: atom.mk  busybox.config
sources/busybox-unknown/busybox-unknown/: atom.mk
sources/glib-base-2.48.1/glib-base-2.48.1/: atom.mk
sources/gst-plugins-bad-1.8.2/: atom.mk  gst-plugins-bad.config
sources/gst-plugins-bad-1.8.2/gst-plugins-bad-1.8.2/: autogen.sh  configure.ac  upstream-setup.sh
sources/gst-plugins-bad-1.8.3/gst-plugins-bad-1.8.3/: Makefile.am  aconfig.in  configure.ac
sources/gst-plugins-base-1.8.2/: atom.mk
sources/gst-plugins-base-1.8.2/gst-plugins-base-1.8.2/: Makefile.am  autogen.sh  configure.ac
sources/gst-plugins-base-1.8.3/: gst-plugins-base.config
sources/gst-plugins-base-1.8.3/gst-plugins-base-1.8.3/: aconfig.in  configure.ac  upstream-setup.sh
sources/gst-plugins-good-1.8.3/: atom.mk  gst-plugins-good.config
sources/gst-plugins-good-1.8.3/gst-plugins-good-1.8.3/gst-libs/gst/v4l2/: Makefile.am
sources/gstreamer-1.8.2/: gstreamer.config
sources/iproute2-3.9.0/: atom.mk
sources/libapm-telemetry-unknown/: atom.mk
sources/libnl2-2.0/: atom.mk
sources/libusb_1_0-1.0.19/: atom.mk
sources/linux-3.4.11/: linux.config
sources/linux-unknown/: linux.config
sources/lttng-modules-unknown/: atom.mk
sources/rsync-3.1.2/: atom.mk
(+75 files in other folders)
